--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <title>Saludo</title>
 </head>
 <body>
-  <div id="undiv">
-    <button onclick="alert('Hola!')">Saludar</button>
-  </div>
+    <div id="divWithoutPropagation">
+        <button onclick="alert('Hola!')">Saludar</button>
+      </div>
 </body>
 </html>
 
