--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Saludo</title>
 </head>
 <body>
-    <div id="divWithoutPropagation">
+    <div id="divsinpropagacion">
         <button onclick="alert('Hola!')">Saludar</button>
       </div>
 </body>
